# waytogo

./: .gitignore  Cargo.toml  LICENSE  Readme.md
src/: connection.rs  interfaces.rs  lib.rs  ownedfd.rs  wire.rs
waytogo/: Cargo.toml
waytogo-macro/: Cargo.toml
waytogo-macro/src/: hexde.rs  lib.rs  macroimpl.rs
waytogo/src/: connection.rs  interfaces.rs  lib.rs  wire.rs
