[package]
name = "waytogo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wayland-sys = "0.29"
log = "0.4"
bitflags = "1.0"
tokio = { version = "1.18", features = ["net"] }
tokio-util = { version = "0.7", features = ["codec"] }
tokio-stream = "0.1"
bytes = "1.1"
smallvec = "1.8"
thiserror = "1.0"
futures = "0.3"
pin-project-lite = "0.2"
async-trait = "*"

