[package]
name = "waytogo-macro"
version = "0.1.0"
edition = "2021"
description = "Waytogo macro library"
authors = ["Julius Lehmann <git@devpi.de>"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
serde = { version = "1", features = ["derive"] }
quote = "1"
proc-macro2 = "1"
syn = { version = "1", features = ["parsing", "proc-macro"] }
quick-xml = { version = "0.23", features = ["serialize"] }
enum-as-inner = "0.5"
heck = "*"
rust-format = { version = "0.3", features = ["post_process", "token_stream"] }
regex = "1"
