[package]
name = "waytogo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
tokio = { version = "1.18", features = ["net", "macros", "rt"] }
tokio-util = { version = "0.7"}
tokio-stream = "0.1"
bytes = "1.1"
smallvec = "1.8"
thiserror = "1.0"
futures = "0.3"
enum-as-inner = "0.5"
nix = { version = "0.24", features = ["uio", "socket"] }
phf = { version = "0.10", features = ["macros"] }
strum = "0.24"
strum_macros = "0.24"
